fix(alert): Ajout de styles pour le composant d'alerte avec z-index et bordure

--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -177,3 +177,8 @@
 .button:active {
   scale: 0.95;
 }
+
+#alert {
+    z-index: 999 !important;
+    border-left: 5px solid #00c950;
+}
